Adding data sources for real data modelling

--- a/Building Data Model and Writing ETL Job/Data Modeling.ipynb
+++ b/Building Data Model and Writing ETL Job/Data Modeling.ipynb
@@ -39,18 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psycopg2\n",
-    "from dotenv import load_dotenv\n",
+    "import psycopg2 # library for working with Postgres database\n",
+    "from dotenv import load_dotenv # library for working with environment variables\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "True"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read connection paramenter from environment variables (BEST PRACTICE!)\n",
+    "# Read connection paramenters from environment variables (BEST PRACTICE!)\n",
     "host = os.environ.get('DB_HOST')\n",
     "dbname = os.environ.get('DB_NAME')\n",
     "user = os.environ.get('DB_USER')\n",
@@ -83,21 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Parameterization is NEEDED!\n",
-    "csv_file_path = 'C:/Users/angel/Desktop/DE PROJECTS/Professional-Portfolio/Building Data Model and Writing ETL Job/Data/airports.csv'\n",
-    "csv_file_path2 = 'C:/Users/angel/Desktop/DE PROJECTS/Professional-Portfolio/Building Data Model and Writing ETL Job/Data/flights.csv'\n",
-    "\n",
-    "tbl_airport = 'airport'\n",
-    "tbl_flights = 'flights'"
+    "# Other parameters\n",
+    "path = os.environ.get('FILE_PATH')\n",
+    "tbl_airport = 'airports'\n",
+    "tbl_flight = 'flights'\n",
+    "tbl_territories = 'territories'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -114,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "host=postgres\n"
+      "host=raw_inventory\n"
      ]
     }
    ],
@@ -131,32 +130,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:/Users/angel/Desktop/DE PROJECTS/Professional-Portfolio/Building Data Model and Writing ETL Job/Data/airports.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "full_path = f'{path}/{tbl_airport}.csv' # Testing if env variables were successfully loaded\n",
+    "print(full_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Start connection to Postgres Database \n",
-    "# using WITH (context manager) to ensure the connection is properly closed (BEST PRACTICE!), \n",
+    "# Using WITH (context manager) to ensure the connection is properly closed (BEST PRACTICE!), \n",
     "try:\n",
-    "    with psycopg2.connect(f\"host={host} dbname='raw_inventory' user={user} password={password}\") as conn:\n",
+    "    with psycopg2.connect(f\"host={host} dbname={dbname} user={user} password={password}\") as conn:\n",
     "        # Create a cursor object\n",
     "        with conn.cursor() as cursor:\n",
     "            # Create a table if not exists\n",
-    "            create_airport_table = \"CREATE TABLE IF NOT EXISTS airport (airport_id INT, city VARCHAR, state VARCHAR, name VARCHAR)\"\n",
-    "            create_flights_table = \"CREATE TABLE IF NOT EXISTS flights (DayofMonth INT, DayOfWeek INT, Carrier VARCHAR, OriginAirportID INT, DestAirportID INT, DepDelay INT, ArrDelay INT)\"\n",
-    "            cursor.execute(create_airport_table)\n",
-    "            cursor.execute(create_flights_table)\n",
+    "            # create_airport_table = \"CREATE TABLE IF NOT EXISTS territories (airport_id INT, city VARCHAR, state VARCHAR, name VARCHAR)\"\n",
+    "            # create_flights_table = \"CREATE TABLE IF NOT EXISTS flights (DayofMonth INT, DayOfWeek INT, Carrier VARCHAR, OriginAirportID INT, DestAirportID INT, DepDelay INT, ArrDelay INT)\"\n",
+    "            \n",
+    "            create_territory_table = f\"CREATE TABLE IF NOT EXISTS {tbl_territories} (SalesTerritoryKey INT, Region VARCHAR, Country VARCHAR, Continent VARCHAR)\"\n",
+    "            \n",
+    "            # cursor.execute(create_airport_table)\n",
+    "            # cursor.execute(create_flights_table)\n",
+    "            cursor.execute(create_territory_table)\n",
     "\n",
-    "            # Read CSV file and load data into tables\n",
-    "            with open(csv_file_path, 'r') as file:\n",
-    "                next(file) #skip first row\n",
-    "                cursor.execute(f\"TRUNCATE TABLE {tbl_airport}\")\n",
-    "                cursor.copy_from(file, tbl_airport, sep=',' )\n",
+    "            # Read airports CSV file and load data into airports table\n",
+    "            # with open(f'{path}/{tbl_airport}.csv', 'r') as file:\n",
+    "            #     next(file) #skip first row\n",
+    "            #     cursor.execute(f\"TRUNCATE TABLE {tbl_airport}\")\n",
+    "            #     cursor.copy_from(file, tbl_airport, sep=',' )\n",
     "\n",
-    "            with open(csv_file_path2, 'r') as file:\n",
+    "            # # Read flights CSV file and load data into flights table\n",
+    "            # with open(f'{path}/{tbl_flight}.csv', 'r') as file:\n",
+    "            #     next(file) #skip first row\n",
+    "            #     cursor.execute(f\"TRUNCATE TABLE {tbl_flight}\")\n",
+    "            #     cursor.copy_from(file, tbl_flight, sep=',' )\n",
+    "            \n",
+    "            # Read territories CSV file and load data into territories table\n",
+    "            with open(f'{path}/{tbl_territories}.csv', 'r') as file:\n",
     "                next(file) #skip first row\n",
-    "                cursor.execute(f\"TRUNCATE TABLE {tbl_flights}\")\n",
-    "                cursor.copy_from(file, tbl_flights, sep=',' )\n",
+    "                cursor.execute(f\"TRUNCATE TABLE {tbl_territories}\")\n",
+    "                cursor.copy_from(file, tbl_territories, sep=',' )\n",
     "\n",
     "    conn.commit()\n",
     "except psycopg2.OperationalError as e:\n",
