Adding best practices

--- a/Building Data Model and Writing ETL Job/Data Modeling.ipynb
+++ b/Building Data Model and Writing ETL Job/Data Modeling.ipynb
@@ -39,13 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import psycopg2 # library for working with Postgres database\n",
     "from dotenv import load_dotenv # library for working with environment variables\n",
-    "import os"
+    "import os\n",
+    "import csv\n",
+    "import io"
    ]
   },
   {
@@ -89,9 +91,13 @@
    "source": [
     "# Other parameters\n",
     "path = os.environ.get('FILE_PATH')\n",
-    "tbl_airport = 'airports'\n",
-    "tbl_flight = 'flights'\n",
-    "tbl_territories = 'territories'"
+    "# tbl_airport = 'airports'\n",
+    "# tbl_flight = 'flights'\n",
+    "tbl_sales = 'Sales_2015'\n",
+    "tbl_products = 'Products'\n",
+    "tbl_territories = 'Territories'\n",
+    "tbl_customers = 'Customers'\n",
+    "tbl_product_subcategories = 'Product_Subcategories'\n"
    ]
   },
   {
@@ -130,25 +136,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:/Users/angel/Desktop/DE PROJECTS/Professional-Portfolio/Building Data Model and Writing ETL Job/data/airports.csv\n"
+      "C:/Users/angel/Desktop/DE PROJECTS/Professional-Portfolio/Building Data Model and Writing ETL Job/data/Sales_2015.csv\n"
      ]
     }
    ],
    "source": [
-    "full_path = f'{path}/{tbl_airport}.csv' # Testing if env variables were successfully loaded\n",
+    "full_path = f'{path}/{tbl_sales}.csv' # Testing if env variables were successfully loaded\n",
     "print(full_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,15 +164,27 @@
     "    with psycopg2.connect(f\"host={host} dbname={dbname} user={user} password={password}\") as conn:\n",
     "        # Create a cursor object\n",
     "        with conn.cursor() as cursor:\n",
-    "            # Create a table if not exists\n",
+    "            # Set the datestyle configuration\n",
+    "            cursor.execute(\"SET datestyle = 'ISO, MDY'\")\n",
+    "\n",
+    "            # Create tables with primary & foreign keys\n",
     "            # create_airport_table = \"CREATE TABLE IF NOT EXISTS territories (airport_id INT, city VARCHAR, state VARCHAR, name VARCHAR)\"\n",
     "            # create_flights_table = \"CREATE TABLE IF NOT EXISTS flights (DayofMonth INT, DayOfWeek INT, Carrier VARCHAR, OriginAirportID INT, DestAirportID INT, DepDelay INT, ArrDelay INT)\"\n",
     "            \n",
     "            create_territory_table = f\"CREATE TABLE IF NOT EXISTS {tbl_territories} (SalesTerritoryKey INT PRIMARY KEY, Region VARCHAR, Country VARCHAR, Continent VARCHAR)\"\n",
+    "            create_customers_table = f\"CREATE TABLE IF NOT EXISTS {tbl_customers} (CustomerKey INT PRIMARY KEY, Prefix VARCHAR, FirstName VARCHAR, LastName VARCHAR, BirthDate DATE, MaritalStatus CHAR(3), Gender CHAR(3), EmailAddress VARCHAR, AnnualIncome VARCHAR, TotalChildren INT, EducationLevel VARCHAR, Occupation VARCHAR, HomeOwner CHAR(3))\"\n",
+    "            create_product_sub_table = f\"CREATE TABLE IF NOT EXISTS {tbl_product_subcategories} (ProductSubcategoryKey INT PRIMARY KEY, SubcategoryName VARCHAR, ProductCategoryKey INT)\"\n",
+    "            \n",
+    "            create_products_table = f\"CREATE TABLE IF NOT EXISTS {tbl_products} (ProductKey INT PRIMARY KEY, ProductSubcategoryKey INT REFERENCES Product_Subcategories(ProductSubcategoryKey), ProductSKU VARCHAR, ProductName VARCHAR, ModelName VARCHAR, ProductDescription VARCHAR, ProductColor VARCHAR, ProductSize VARCHAR, ProductStyle VARCHAR, ProductCost NUMERIC(10,2), ProductPrice NUMERIC(10,2))\"\n",
+    "            create_sales_table = f\"CREATE TABLE IF NOT EXISTS {tbl_sales} (OrderDate DATE, StockDate DATE, OrderNumber VARCHAR PRIMARY KEY, ProductKey INT REFERENCES Products(ProductKey), CustomerKey INT REFERENCES Customers(CustomerKey), TerritoryKey INT REFERENCES Territories(SalesTerritoryKey), OrderLineItem INT, OrderQuantity INT)\"\n",
     "            \n",
     "            # cursor.execute(create_airport_table)\n",
     "            # cursor.execute(create_flights_table)\n",
     "            cursor.execute(create_territory_table)\n",
+    "            cursor.execute(create_customers_table)\n",
+    "            cursor.execute(create_product_sub_table)\n",
+    "            cursor.execute(create_products_table)\n",
+    "            cursor.execute(create_sales_table)\n",
     "\n",
     "            # Read airports CSV file and load data into airports table\n",
     "            # with open(f'{path}/{tbl_airport}.csv', 'r') as file:\n",
@@ -180,43 +198,80 @@
     "            #     cursor.execute(f\"TRUNCATE TABLE {tbl_flight}\")\n",
     "            #     cursor.copy_from(file, tbl_flight, sep=',' )\n",
     "            \n",
-    "            # Read territories CSV file and load data into territories table\n",
+    "\n",
+    "            # Reading data from CSV files and loading then into tables\n",
+    "\n",
+    "            ### TERRITORY TABLE\n",
     "            with open(f'{path}/{tbl_territories}.csv', 'r') as file:\n",
     "                next(file) #skip first row\n",
-    "                cursor.execute(f\"TRUNCATE TABLE {tbl_territories}\")\n",
-    "                cursor.copy_from(file, tbl_territories, sep=',' )\n",
+    "                # cursor.execute(f\"TRUNCATE TABLE {tbl_territories}\")\n",
+    "                cursor.copy_from(file, tbl_territories.lower() , sep=',' )\n",
+    "            \n",
+    "            ### PRODUCT_SUBCATEGORIES TABLE\n",
+    "            with open(f'{path}/{tbl_product_subcategories}.csv', 'r') as file:  #ok\n",
+    "                next(file) #skip first row\n",
+    "                # cursor.execute(f\"TRUNCATE TABLE {tbl_product_subcategories}\")\n",
+    "                cursor.copy_from(file, tbl_product_subcategories.lower(), sep=',' )\n",
+    "\n",
+    "            ### PRODUCTS TABLEt\n",
+    "            # products.csv containes fields enclosed in quotation marks (\"\") because there are commas (,) inside the field that are not delimiters.\n",
+    "            # that's why we use .copy_expert() funtion\n",
+    "            with open(f'{path}/{tbl_products}.csv', 'r') as file:  # ok\n",
+    "                file_content = file.read()\n",
+    "                # Create a file-like object from the string content\n",
+    "                file_obj = io.StringIO(file_content)\n",
+    "                # Load the CSV data into the PostgreSQL table using copy_expert()\n",
+    "                cursor.copy_expert(\"COPY products FROM STDIN WITH (FORMAT CSV, DELIMITER ',', HEADER TRUE, QUOTE '\\\"', ESCAPE '\\\"')\", file_obj)\n",
+    "\n",
+    "            ### CUSTOMERS TABLE\n",
+    "            # customers.csv containes fields enclosed in quotation marks (\"\") because there are commas (,) inside the field that are not delimiters.\n",
+    "            # that's why we use .copy_expert() funtion\n",
+    "            with open(f'{path}/{tbl_customers}.csv', 'r', encoding='iso-8859-1') as file:  # ok\n",
+    "                file_content = file.read()\n",
+    "                # Create a file-like object from the string content\n",
+    "                file_obj = io.StringIO(file_content)\n",
+    "                # Load the CSV data into the PostgreSQL table using copy_expert()\n",
+    "                cursor.copy_expert(\"COPY customers FROM STDIN WITH (FORMAT CSV, DELIMITER ',', HEADER TRUE, QUOTE '\\\"', ESCAPE '\\\"')\", file_obj)\n",
+    "\n",
+    "            ### SALES_2015 TABLE\n",
+    "            # sales.csv containes fields enclosed in quotation marks (\"\") because there are commas (,) inside the field that are not delimiters.\n",
+    "            # that's why we use .copy_expert() funtion\n",
+    "            with open(f'{path}/{tbl_sales}.csv', 'r') as file:  \n",
+    "                file_content = file.read()\n",
+    "                # Create a file-like object from the string content\n",
+    "                file_obj = io.StringIO(file_content)\n",
+    "                # Load the CSV data into the PostgreSQL table using copy_expert()\n",
+    "                cursor.copy_expert(\"COPY sales_2015 FROM STDIN WITH (FORMAT CSV, DELIMITER ',', HEADER TRUE, QUOTE '\\\"', ESCAPE '\\\"')\", file_obj)\n",
     "\n",
     "    conn.commit()\n",
     "except psycopg2.OperationalError as e:\n",
     "    print(\"Could not start a connection to the database\")\n",
     "    print(e)\n",
     "except psycopg2.DatabaseError as e:\n",
-    "    print(\"An error occur while working with the database\")\n",
+    "    conn.rollback() # Rollback the transaction in case of any error\n",
+    "    print(\"An error occur while working with the database, Rolling back!\")\n",
     "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "host=localhost\n"
+      "hola\n"
      ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "# import string\n",
+    "\n",
+    "greeting = 'HOLA'\n",
+    "print(greeting.lower())"
    ]
   }
  ],
